--- a/demo_index.html
+++ b/demo_index.html
@@ -6,12 +6,7 @@
   <body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
-    <!-- Add some information about yourself below -->
-    <!-- Your name -->
 
-    <!-- Your GitHub user name -->
-    
-    <!-- Your favorite coding language -->
-
+    <p>My name is Jack Brounstein, GitHub user madjaqk.  At the moment, my favorite coding language is Python, though I dream of one day mastering Piet.</p>
   </body>
 </html>
