--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,11 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
+    <p>My name is Mari, but I go by Mary.</p>
 
     <!-- Your GitHub user name -->
-    
+    <p> Username is mml1</p>
     <!-- Your favorite coding language -->
-
+    <p>My favorite coding language is python.</p>
   </body>
 </html>
