--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,12 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <p>I have a love for fried chicken, Vietnamese food, and computers.</p>
     <!-- Your name -->
-
+    <p>My name is Alex Quang</p>
     <!-- Your GitHub user name -->
-    
+    <p>My GitHub user name is aquang9124</p>
     <!-- Your favorite coding language -->
-
+    <p>My favorite coding language is Javascript</p>
   </body>
 </html>
