--- a/demo_index.html
+++ b/demo_index.html
@@ -7,6 +7,7 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <p>This is my new paragraph that should require I make a pull request to get it up on the github origin repo.</p>
+    <h2>Just for the hell of it heres an </h2>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
 
