--- a/demo_index.html
+++ b/demo_index.html
@@ -6,12 +6,8 @@
   <body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
-    <!-- Add some information about yourself below -->
-    <!-- Your name -->
-
-    <!-- Your GitHub user name -->
-    
-    <!-- Your favorite coding language -->
-
+    <p>My name is Dong Hee Lee, and I am from Seattle Washington. I love black coffee.</p>
+    <p>My Github user name is dongheelee1</p>
+    <p>My favorite coding language is php</p>
   </body>
 </html>
