--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,10 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    <h3>Hi I'm Lindsay</h3>
     <!-- Your GitHub user name -->
-    
+    <h4>GitHub name: LindsAndrus</h4>
     <!-- Your favorite coding language -->
-
+    <p>I'm not sure yet what my favorite coding language is :)</p>
   </body>
 </html>
