--- a/demo_index.html
+++ b/demo_index.html
@@ -6,12 +6,17 @@
   <body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
+
     <!-- Add some information about yourself below -->
     <!-- Your name -->
 
+    <h2>My name is Mollie Knute</h2>
+
     <!-- Your GitHub user name -->
+    <h3>My GitHub user name is MCKnute</h3>
     
     <!-- Your favorite coding language -->
+    <h3>My favorite coding language is HTML/CSS5/Javascript!</h3>
 
   </body>
 </html>
