--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,11 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
-    <!-- Your name -->
+    Donovan An
 
-    <!-- Your GitHub user name -->
+    donotruck21
     
-    <!-- Your favorite coding language -->
+    I don't know my favorite coding language yet!
 
   </body>
 </html>
