--- a/demo_index.html
+++ b/demo_index.html
@@ -6,12 +6,14 @@
   <body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
-    <!-- Add some information about yourself below -->
-    <!-- Your name -->
+   
+    I eat moths.
+   
+   Vasilia the Great
 
-    <!-- Your GitHub user name -->
+    vaskous27
     
-    <!-- Your favorite coding language -->
+    LOL CATS
 
   </body>
 </html>
