--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,11 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
-    <!-- Your name -->
+    <h2>Nigel</h2><!-- Your name -->
 
-    <!-- Your GitHub user name -->
+    <h2>nkhs89</h2><!-- Your GitHub user name -->
     
-    <!-- Your favorite coding language -->
+    <h2>Python</h2><!-- Your favorite coding language -->
 
   </body>
 </html>
