--- a/demo_index.html
+++ b/demo_index.html
@@ -6,12 +6,13 @@
   <body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
-    <!-- Add some information about yourself below -->
+	<!-- Add some information about yourself below -->
+	<p>I enjoy spinning fire poi.</p>
     <!-- Your name -->
-
+	<p>Amy Meyers</p>
     <!-- Your GitHub user name -->
-    
+	<p>symaselbbircs</p>
     <!-- Your favorite coding language -->
-
+	<p>Python or Matlab</p>
   </body>
 </html>
