--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,11 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    <h1>Melissa Mercedes Guerrero</h1>
     <!-- Your GitHub user name -->
-    
+    <p>Mmgfrog</p>
     <!-- Your favorite coding language -->
+    <p>So far I like HTML5/CSS3 and the mySQL Workbench. jQuery is hard for me. I also like the JavaScript algorithms practice sessions in class.</p>
 
   </body>
 </html>
