--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,11 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
-    <!-- Your name -->
+    <p>Leo Sooter</p>
 
-    <!-- Your GitHub user name -->
-    
-    <!-- Your favorite coding language -->
+    <p>leosooter</p>
+
+    <p>Javascript</p>
 
   </body>
 </html>
