--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,15 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    Tall and male.
     <!-- Your name -->
+    Richard M.
 
     <!-- Your GitHub user name -->
+    globedasher
     
     <!-- Your favorite coding language -->
+    Python
 
   </body>
 </html>
