--- a/demo_index.html
+++ b/demo_index.html
@@ -6,11 +6,15 @@
   <body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
+
+    <p>
+        Jess Chambers, Jiobert, I'm lost...still.
+    </p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
 
     <!-- Your GitHub user name -->
-    
+
     <!-- Your favorite coding language -->
 
   </body>
