--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,12 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <p>I am a Coding Dojo student!</p>
     <!-- Your name -->
-
+    <p>My name is Kellen Preston</p>
     <!-- Your GitHub user name -->
-    
+    <p>My GitHub user is: kellenmather</p>
     <!-- Your favorite coding language -->
-
+    <p>I am to new to coding to have a favorite language.</p>
   </body>
 </html>
