--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,12 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    I'm using a Lenovo
     <!-- Your name -->
-
+    Chetan Raj
     <!-- Your GitHub user name -->
-    
+    craj1031tx
     <!-- Your favorite coding language -->
-
+    Don't have one yet! I'm open to suggestions though :)
   </body>
 </html>
