--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,11 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    <h1>Name: John Tolentino </h1>
     <!-- Your GitHub user name -->
-    
+    <p>GitHub Username: J.tolentino90 </p>
     <!-- Your favorite coding language -->
+    <p>Favorite code: the one I'm learning next </p>
 
   </body>
 </html>
