--- a/demo_index.html
+++ b/demo_index.html
@@ -6,12 +6,16 @@
   <body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
-    <!-- Add some information about yourself below -->
-    <!-- Your name -->
+    <p>
+      hello, my name is ethan.
 
-    <!-- Your GitHub user name -->
-    
-    <!-- Your favorite coding language -->
+    </p>
+    <p>
+      my github user name is ethantang93
+    </p>
+    <p>
+      my favorite coding language is python
+    </p>
 
   </body>
 </html>
