--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,11 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
-    <!-- Your name -->
+    <h1> Hi, My name is Slim Shady </h1>
 
-    <!-- Your GitHub user name -->
-    
-    <!-- Your favorite coding language -->
+    <h2> User name is DavidCPorter</h2>
+
+    <h3> Favorite coding language is....</h3>
 
   </body>
 </html>
