--- a/demo_index.html
+++ b/demo_index.html
@@ -7,11 +7,12 @@
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
+    <p>I am very familiar with GIT and its various uses. I enjoy the platform and find it very useful</p>
     <!-- Your name -->
-
+    <p>Joshua Summers</p>
     <!-- Your GitHub user name -->
-    
+    <p>catalystjs</p>
     <!-- Your favorite coding language -->
-
+    <p>Python!!!!</p>
   </body>
 </html>
