--- a/demo_index.html
+++ b/demo_index.html
@@ -6,12 +6,14 @@
   <body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
-    <!-- Add some information about yourself below -->
-    <!-- Your name -->
+    <p>Some information abotu me</p>
+    <p>John Park</p>
 
-    <!-- Your GitHub user name -->
+    <p>GitHub Account: johnpark3987</p>
     
-    <!-- Your favorite coding language -->
+    <p>All the languages so far.</p>
+
+    EDITTED
 
   </body>
 </html>
