--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,12 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    <h1>Alex</h1>
     <!-- Your GitHub user name -->
-    
+      <h2>Alex71197</h2>
     <!-- Your favorite coding language -->
-
+        <p>
+          huh?
+        </p>
   </body>
 </html>
