--- a/demo_index.html
+++ b/demo_index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Git Demo Index Page</title>
+    <meta charset="utf-8">
   </head>
   <body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
-    <!-- Your name -->
-
-    <!-- Your GitHub user name -->
-    
-    <!-- Your favorite coding language -->
-
+    <ul>
+      <li>My name: Jasmine</li>
+      <li>My GitHub username: jupigare</li>
+      <li>My favorite coding language: Python</li>
+    </ul>
   </body>
 </html>
