--- a/demo_index.html
+++ b/demo_index.html
@@ -6,12 +6,13 @@
   <body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
-    <!-- Add some information about yourself below -->
-    <!-- Your name -->
+    Add some information about yourself below
+    Your name
+    <p>Christopher Nguyen</p>
 
-    <!-- Your GitHub user name -->
-    
-    <!-- Your favorite coding language -->
+    Your GitHub user name
+
+    Your favorite coding language
 
   </body>
 </html>
