--- a/demo_index.html
+++ b/demo_index.html
@@ -8,7 +8,8 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+Hi my name is nick and this is my first forking of a remote repository
+my GitHub user name is: Gitnicmora and my favorite coding language so far is HTML 
     <!-- Your GitHub user name -->
     
     <!-- Your favorite coding language -->
