--- a/demo_index.html
+++ b/demo_index.html
@@ -5,13 +5,17 @@
   </head>
   <body>
     <h1>Git Demo</h1>
-    <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
+    <p>
+      This is our test repository to test forking a repository and sending a
+      pull request back to make changes to the original
+    </p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
+    <p>Kristin Caras</p>
 
     <!-- Your GitHub user name -->
-    
+    <p>Github: KristCar</p>
     <!-- Your favorite coding language -->
-
+    <p>Javascript</p>
   </body>
 </html>
