--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,12 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
+	Shendrit
 
     <!-- Your GitHub user name -->
-    
-    <!-- Your favorite coding language -->
+    	shendritk
 
+    <!-- Your favorite coding language -->
+	Java
   </body>
 </html>
