--- a/demo_index.html
+++ b/demo_index.html
@@ -8,6 +8,7 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <P>J Assami</P>
     <p>user_name: jassami</p>
+    <p>Python</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
 
