--- a/demo_index.html
+++ b/demo_index.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <title>Git Demo Index Page</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <h1>Git Demo</h1>
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
+    <p> My name is <strong>Everett Lala</strong>.</p>
 
     <!-- Your GitHub user name -->
-    
-    <!-- Your favorite coding language -->
+    <p>My GitHub user name is <strong>everett-lala</strong>.</p>
 
-  </body>
+    <!-- Your favorite coding language -->
+    <p>My favorite coding language is <strong>Python</strong>.</p>
+
+</body>
+
 </html>
