--- a/demo_index.html
+++ b/demo_index.html
@@ -8,10 +8,11 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
-
+    <h3>Hola mi nombre es Ricardo Vega Alrcón</h3>
     <!-- Your GitHub user name -->
-    
+    <p>Mi usuario de GitHub es https://github.com/vegaric</p>
     <!-- Your favorite coding language -->
+    <p>Mi lenguaje favorito de programación es Python</p>
 
   </body>
 </html>
