--- a/demo_index.html
+++ b/demo_index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+a<!DOCTYPE html>
 <html>
   <head>
     <title>Git Demo Index Page</title>
@@ -8,7 +8,7 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
 
-    <p>asdfsadfsafsadfsd</p>
+    <p>asdfsadfsafssfsdfadfsd</p>
     <!-- Your name -->
     <p>asfsafsf</p>
     <!-- Your GitHub user name -->
